[project]
name = "pulse-check"
version = "0.1.0"
description = "A backend service that tracks device liveness through configurable countdown timers and raises alerts on missed heartbeats. "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
]
